Add html files.

--- a/site/html5.html
+++ b/site/html5.html
@@ -10,20 +10,9 @@
 </head>
 <body>
   <header>
-    <h1>Mes notes de formation</h1>
+    <h1>HTML 5</h1>
+    <a href="index.html">Acceuil</a>
   </header>
-  <aside>
-    <ul>
-      <li><a href="html5.html">HTML 5</a></li>
-      <li><a href="css3.html">CSS 3</a></li>
-      <li>BootStrap</li>
-      <li>GitHub</li>
-      <li>JavaScript</li>
-      <li>PHP</li>
-      <li>Symfony</li>
-      <li>WordPress</li>
-    </ul>
-  </aside>
   <footer>
     <p>Me contacter <a href="mailto:fabriceatln@gmail.com">fabriceatln@gmail.com</a></p>
   </footer>
