--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,7 @@
   </header>
   <aside>
     <ul>
-      <li><a href="html5.html">HTML 5</a></li>
+      <li><a href="html5.html">HTML, CSS et BootStrap</a></li>
       <li><a href="css3.html">CSS 3</a></li>
       <li>BootStrap</li>
       <li>GitHub</li>
