Test scrolling menu

--- a/site/01-html_css_bootstrap/introduceToHtml.html
+++ b/site/01-html_css_bootstrap/introduceToHtml.html
@@ -6,18 +6,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Ce site présente mes notes de cours sur ma formation STUDI de Graduate développeur 
   PHP / Symfony.">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <title>Notes - Graduate développeur PHP/Symfony</title>
 </head>
 <body class="container">
   <header id="up">
-    <h1>HTML, CSS et BootStrap</h1>
-    <a href="index.html">Acceuil</a>
+    <h1>Développement front-End</h1>
+    <a href="/site/index.html">Acceuil</a>
   </header>
   <main>
     <section class="summary">
       <h2 class="sub-title-h2">Sommaire</h2>
       <ul>
+        <li class="deroulant"><a href="#">Créer un site web avec HTML, CSS et Bootstrap</a>
+          <ol class="under">
+            <li><a href="#">Introduction au HTML</a></li>
+            <li><a href="#">Syntaxe générale de HTML</a></li>
+            <li><a href="#">L'organisation du texte</a></li>
+            <li><a href="#">Un langage hypertexte</a></li>
+            <li><a href="#">Le multimédia en HTML</a></li>
+            <li><a href="#">Introduction au CSS</a></li>
+            <li><a href="#">CSS3 : Le stylage du texte</a></li>
+            <li><a href="#">La structuration logique en HTML5 et le modèle de boîtes en CSS3</a></li>
+            <li><a href="#">Les sélecteurs CSS</a></li>
+            <li><a href="#">La mise en page avec CSS</a></li>
+            <li><a href="#">La création de tableaux</a></li>
+            <li><a href="#">La création de formulaires</a></li>
+            <li><a href="#">Layout avec CSS Grid</a></li>
+            <li><a href="#">Les effets avancés de CSS</a></li>
+            <li><a href="#">Utiliser des documentations CSS</a></li>
+            <li><a href="#">Le responsive design</a></li>
+            <li><a href="#">Valider la qualité de son site</a></li>
+            <li><a href="#">L'installation et la prise en main du framework Bootstrap : Hello world</a></li>
+            <li><a href="#">La grille bootstrap</a></li>
+            <li><a href="#">Les éléments bootstrap</a></li>
+            <li><a href="#">Les composants bootstrap</a></li>
+            <li><a href="#">Ouverture vers d'autres framework CSS</a></li>
+            <li><a href="#">SASS</a></li>
+            <li><a href="#">Le référencement des sites Web</a></li>
+            <li><a href="#">Déployer son site sur le Web</a></li>
+          </ol>
+        </li>
+      </ul>
+      <br>
+      <ul>
+        <li><a href="#">Créer un sit web avec HTML, CSS et Bootstrap</a></li>
         <li><a href="#internet">Internet</a></li>
         <li><a href="#decouverte-Web">Découverte du Web</a></li>
         <li><a href="#sites-web">Les sites web</a></li>
@@ -40,7 +73,7 @@
           comprendre, il a fallu concevoir une même manière d'envoyer ces messages : c'est le <strong>protocole TCP/IP
           </strong>.
           <img 
-            id="img-internet" src="images/internet.gif" 
+            id="img-internet" src="../images/internet.gif" 
             alt="Réseau internet mondiale" title="Le réseau internet mondiale">
         </p>
         <p>Il est la fusion de deux protocoles :</p>
