--- a/site/01-html_css_bootstrap/introduceToHtml.html
+++ b/site/01-html_css_bootstrap/introduceToHtml.html
@@ -18,7 +18,7 @@
     <section class="summary">
       <h2 class="sub-title-h2">Sommaire</h2>
       <ul>
-        <li class="deroulant"><a href="#">Créer un site web avec HTML, CSS et Bootstrap</a>
+        <li class="deroulant"><a href="#">Créer un site web avec HTML, CSS et Bootstrap</a>&#9660;
           <ol class="under">
             <li><a href="#">Introduction au HTML</a></li>
             <li><a href="#">Syntaxe générale de HTML</a></li>
