--- a/site/01-html_css_bootstrap/introduceToHtml.html
+++ b/site/01-html_css_bootstrap/introduceToHtml.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Ce site présente mes notes de cours sur ma formation STUDI de Graduate développeur 
   PHP / Symfony.">
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="/site/style.css">
   <title>Notes - Graduate développeur PHP/Symfony</title>
 </head>
 <body class="container">
@@ -15,10 +15,28 @@
     <a href="/site/index.html">Acceuil</a>
   </header>
   <main>
-    <section class="summary">
-      <h2 class="sub-title-h2">Sommaire</h2>
+    <div class="card">
+      <a href="#">
+        <img class="size-logo" src="/site/images/logohtml.png" alt="HTML 5">
+        <div class="container">
+          <h4 class="title-h4">HTML</h4>
+        </div>
+      </a>
+    </div>
+    <div class="card">
+      <a href="#">
+        <img class="size-logo" src="/site/images/css3.png" alt="CSS 3">
+        <div class="container">
+          <h4 class="title-h4">CSS</h4>
+        </div>
+      </a>
+    </div>
+    <!-- <section class="summary flex-row">
+
+    </section> -->
+    <!-- <section class="summary">
       <ul>
-        <li class="deroulant"><a href="#">Créer un site web avec HTML, CSS et Bootstrap</a>&#9660;
+        <li><a class="main-scrolling" ref="#">Créer un site web avec HTML, CSS et Bootstrap</a> &#9660;
           <ol class="under">
             <li><a href="#">Introduction au HTML</a></li>
             <li><a href="#">Syntaxe générale de HTML</a></li>
@@ -47,18 +65,29 @@
             <li><a href="#">Déployer son site sur le Web</a></li>
           </ol>
         </li>
-      </ul>
-      <br>
-      <ul>
-        <li><a href="#">Créer un sit web avec HTML, CSS et Bootstrap</a></li>
-        <li><a href="#internet">Internet</a></li>
-        <li><a href="#decouverte-Web">Découverte du Web</a></li>
-        <li><a href="#sites-web">Les sites web</a></li>
-        <li><a href="#html">Le HTML</a></li>
-        <li><a href="#vsCode">Visual Studio Code</a></li>
+        <li><a class="main-scrolling" href="#">S'initier à la programmation avec Javascript</a> &#9660;
+          <ol class="under">
+            <ul>
+              <li class="sub-li">Les dates &#9660;
+                <ol class="under1">
+                  <li><a href="../01-html_css_bootstrap/JavaScript/objet-date.html">L'objet Date</a></li>
+                  <li><a href="../01-html_css_bootstrap/JavaScript/setters-getters.html">Setters et getters</a></li>
+                  <li><a href="#">Les manipulations de dates</a></li>
+                </ol> 
+              </li>
+              <li class="sub-li">Les objets Javascript &#9660;
+                <ol class="under1">
+                  <li><a href="../01-html_css_bootstrap/JavaScript/objet-date.html">L'objet Date</a></li>
+                  <li><a href="#">Setters et getters</a></li>
+                  <li><a href="#">Les manipulations de dates</a></li>
+                </ol> 
+              </li> 
+            </ul>
+          </ol> 
+        </li>
       </ul>
     </section>
-    <section class="section">
+    <section>
       <h2>Introduction au HTML</h2>
       <article  class="art-box">
         <header>
@@ -96,9 +125,7 @@
           Les noms de domaine sont composés :
           <ul>
             <li>
-              d'un domaine de premier niveau (TLD, pour Top-Level Domain) ou extension.
-              Les TLD se placent à la fin du nom de domaine et indiquent leur provenance (<i>fr, be...</i>) ou le type de site 
-              Internet (<i>com, org...</i>).<br>
+              d'un domaine de premier niveau (TLD, pour Top-Level Domain) ou extension. Les TLD se placent à la fin du nom de domaine et indiquent leur provenance (<i>fr, be...</i>) ou le type de site Internet (<i>com, org...</i>).<br>
             </li>
             <li>
               d'un domaine et, parfois, d'un ou plusieurs sous-domaines, tous séparés par des points.
@@ -178,7 +205,8 @@
           développeur front-end. Pour le back-end, le langages le plus utilisé est le <strong>PHP</strong>.
         </p>
         <h3 class="sub-title-h3">Les différents types de site</h3>
-        <p>Il existe deux grands types de site :<br>
+        <p>Il existe deux grands types de site :</p>
+        <div>
           <ul>
             <li>
               site statique : c'est un site qui ne change jamais. 
@@ -187,7 +215,7 @@
               site dynamique : c'est un site qui peut se mettre régulièrement à jour.
             </li>
           </ul>
-        </p>
+        </div>
         <h3 class="sub-title-h3">Fonctionnement des sites</h3>
         <p>Afin de mettre un site à jour, on utilise un serveur web. C'est l'ordinateur qui va stocker les données 
           relatives au bon fonctionnement des sites qu'il héberge, dont le code. Il assure également la disponibilité 
@@ -227,7 +255,7 @@
         </p>
         <a href="#up">Haut</a>
       </article>
-    </section>
+    </section> -->
   </main>
   <footer class="footer">
     <p>&copy; 2021 - <strong>Graduate développeur PHP / Symfony</strong></p>
