Add alog.html file

--- a/site/01-html_css_bootstrap/introduceToHtml.html
+++ b/site/01-html_css_bootstrap/introduceToHtml.html
@@ -14,7 +14,7 @@
     <h1>Développement front-End</h1>
     <a href="/site/index.html">Acceuil</a>
   </header>
-  <main>
+  <main class="flex-h-center">
     <div class="card">
       <a href="#">
         <img class="size-logo" src="/site/images/logohtml.png" alt="HTML 5">
