--- a/site/index.html
+++ b/site/index.html
@@ -18,7 +18,7 @@
       <ul class="list">
         <li><a href= "01-html_css_bootstrap/introduceToHtml.html">Développement front-End</a></li>
         <li><a href= "#">Développement back-End</a></li>
-        <li><a href= "algo.html">Algorithmie</a></li>
+        <li><a href= "/site/001-Font-end/algo.html">Algorithmie</a></li>
       </ul>
     </section>
   </main>
