--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/objet-date.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/objet-date.html
@@ -12,7 +12,7 @@
 <body class="container">
   <header id="up">
     <h1>S'initier à la programmation avec Javascript - Les dates</h1>
-    <a href="../introduceToHtml.html">Retour</a>
+    <a href="initProgJSMenu2.html">Retour</a>
   </header>
   <main>
     <section class="section">
