--- a/site/index.html
+++ b/site/index.html
@@ -16,9 +16,9 @@
     <section>
       <img class="img-logo" src="/site/images/code.jpg" alt="">
       <ul class="list">
-        <li><a href= "01-html_css_bootstrap/introduceToHtml.html">Développement front-End</a></li>
+        <li><a href= "001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu.html">Développement front-End</a></li>
         <li><a href= "#">Développement back-End</a></li>
-        <li><a href= "algo.html">Algorithmie</a></li>
+        <li><a href= "002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html">Découvrir la programmation</a></li>
       </ul>
     </section>
   </main>
