--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu2.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu2.html
@@ -13,7 +13,7 @@
     <nav>
       <section class="return" >
         <h2 class="sub-title-h2">Sommaire</h2>
-        <a href="../../index.html">Retour</a>
+        <a href="initProgJSMenu.html">Retour</a>
       </section>
       <ul><li><a href="objet-date.html">Les dates</a></li></ul>
       </nav>
