--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/setters-getters.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/setters-getters.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Ce site présente mes notes de cours sur ma formation STUDI de Graduate développeur 
   PHP / Symfony.">
-  <link rel="stylesheet" href="../../style.css">
+  <link rel="stylesheet" href="/site/style.css">
   <title>Notes - Graduate développeur PHP/Symfony</title>
 </head>
 <body>
@@ -15,16 +15,15 @@
     <a href="initProgJSMenu2.html">Retour</a>
   </header>
   <main>
-    <section class="section">
+    <section>
       <h2>Setters et getters</h2>
-      <article  class="art-box">
+      <article>
         <header>
-          <h2 id="internet" class="sub-title-h2">Une date en JavaScript est généralement représentée de trois manières 
-            différentes</h2>
+          <p>Après avoir découvert l'objet Date dans une première partie, nous allons à présent étudier les différentes méthodes dont il dispose et qui vont nous permettre :</p>
         </header>
       </article>
     </section>
-    <section class="section">
+    <section>
       <article class="art-box">
         <p>Pour construire une date deux méthodes possible :<br>
           <ul>
