--- a/site/002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/algorithmes_classiques.html
+++ b/site/002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/algorithmes_classiques.html
@@ -15,8 +15,8 @@
   <main>
     <section>
       <h2 class="section">Algorithmes classiques</h2>
+      <p class="">Pour être un bon développeur, il est important d'avoir une culture des algorithmes classiques. Ce sont des algorithmes qui ont été écrits et qui sont reconnus comme étant la meilleure solution pour un problème donné.</p>
       <article>
-        <p>Pour être un bon développeur, il est important d'avoir une culture des algorithmes classiques. Ce sont des algorithmes qui ont été écrits et qui sont reconnus comme étant la meilleure solution pour un problème donné.</p>
         <nav>
           <section class="return" >
             <h2 class="sub-title-h2">Sommaire</h2>
