--- a/site/index.html
+++ b/site/index.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="style.css">
   <title>Graduate développeur PHP/Symfony</title>
 </head>
-<body>
+<body class="container">
   <header>
-    <h1>Notes</h1>
+    <h1>Graduate développeur PHP/Symfony</h1>
   </header>
   <main>
     <section>
       <img class="img-logo" src="/site/images/code.jpg" alt="">
-      <ul class="list">
+      <ul class="list li-empty">
         <li><a href= "001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu.html">Développement front-End</a></li>
         <li><a href= "#">Développement back-End</a></li>
         <li><a href= "002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html">Découvrir la programmation</a></li>
