Modify index.html and style.css

--- a/site/index.html
+++ b/site/index.html
@@ -13,9 +13,9 @@
     <h1>Graduate développeur PHP/Symfony</h1>
   </header>
   <main>
-    <section>
-      <img class="img-logo" src="/site/images/code.jpg" alt="">
-      <ul class="list li-empty">
+    <section class="relative flex-v-center">
+      <img class="img-logo" src="/site/images/code.jpg" alt="Code">
+      <ul class="training-bloc">
         <li><a href= "001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu.html">Développement front-End</a></li>
         <li><a href= "#">Développement back-End</a></li>
         <li><a href= "002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html">Découvrir la programmation</a></li>
