Modify the position of img-logo

--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,7 @@
   </header>
   <main>
     <section class="relative flex-v-center">
-      <img class="img-logo" src="/site/images/code.jpg" alt="Code">
+      <img class="img-logo" src="images/code.jpg" alt="Code">
       <ul class="training-bloc">
         <li><a href= "001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu.html">Développement front-End</a></li>
         <li><a href= "#">Développement back-End</a></li>
