Rename objet-dates.html => les-dates.html

--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu2.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu2.html
@@ -16,7 +16,7 @@
         <a href="initProgJSMenu.html">Retour</a>
       </section>
       <ul><li><a href="objet-date.html">Les dates</a></li></ul>
-      <ul><li><a href="objet-date.html">Les objets JavaScript</a></li></ul>
+      <ul><li><a href="objet-js.html">Les objets JavaScript</a></li></ul>
       </nav>
   </main>
 </body>
