--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/les-dates.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/les-dates.html
@@ -12,6 +12,7 @@
 <body>
   <header id="up">
     <h1 class="shape-title">S'initier à la programmation avec Javascript</h1>
+    <h1>Les dates</h1>
   </header>
   <main>
     <nav>
