Modify sub title h1 => h2

--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/objet-js.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/objet-js.html
@@ -14,6 +14,7 @@
     <h1 class="shape-title">S'initier à la programmation avec Javascript</h1>
   </header>
   <main>
+    <h2>Les objets JavaScript</h2>
     <nav>
       <section class="return" >
         <h2 class="sub-title-h2">Sommaire</h2>
