--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu2.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu2.html
@@ -15,7 +15,7 @@
         <h2 class="sub-title-h2">Sommaire</h2>
         <a href="initProgJSMenu.html">Retour</a>
       </section>
-      <ul><li><a href="objet-date.html">Les dates</a></li></ul>
+      <ul><li><a href="les-dates.html">Les dates</a></li></ul>
       <ul><li><a href="objet-js.html">Les objets JavaScript</a></li></ul>
       </nav>
   </main>
