--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/les-dates.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/les-dates.html
@@ -14,7 +14,7 @@
     <h1 class="shape-title">S'initier à la programmation avec Javascript</h1>
   </header>
   <main>
-    <h2>Les dates</h2>
+    <h2>Les dates <a href="../../PDF/Les_dates.pdf" target="_blank" class="doc-pdf">PDF</a></h2>
     <nav>
       <section class="return" >
         <h2 class="sub-title-h2">Sommaire</h2>
